change manager Yarn to NPM

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "test": "vitest run --dir src/use-case",
     "test:watch": "vitest --dir src/use-case",
     "test:create-prisma-environment-path": "cd ./prisma/vitest-environment-prisma",
-    "test:create-prisma-environment-link": "yarn link",
+    "test:create-prisma-environment-link": "npm link",
     "test:create-prisma-environment": "run-s test:create-prisma-environment-path test:create-prisma-environment-link",
-    "test:install-prisma-environment": "yarn link vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
     "test:e2e:watch": "vitest --dir src/http",
