--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -14,6 +14,6 @@ jobs:
           node-version: 18
           cache: 'yarn'
 
-      - run: yarn ci
+      - run: yarn install --frozen-lockfile
 
       - run: yarn test
