--- a/.env.exemple
+++ b/.env.exemple
@@ -1,1 +1,8 @@
-NODE_ENV=DEV
+NODE_ENV=dev
+PORT=3333
+
+# Auth
+JWT_SECRET=testing
+
+# DB
+DATABASE_URL="postgresql://admin:admin@localhost:5432/apisolid?schema=public"
