--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -27,5 +27,6 @@ jobs:
       - run: yarn install --frozen-lockfile
 
       - run: yarn test:e2e
-        env: testing
-        DATABASE_URL: "postgresql://admin:admin@localhost:5432/apisolid?schema=public"
+        env:
+          JWT_SECRET: testing
+          DATABASE_URL: "postgresql://admin:admin@localhost:5432/apisolid?schema=public"
