--- a/.env.exemple
+++ b/.env.exemple
@@ -2,7 +2,7 @@ NODE_ENV=dev
 PORT=3333
 
 # Auth
-JWT_SECRET=testing
+JWT_SECRET=test
 
 # DB
 DATABASE_URL="postgresql://admin:admin@localhost:5432/apisolid?schema=public"
